@@ -35,6 +35,8 @@
 
 void event_err(int eval, const char *fmt, ...) EV_CHECK_FMT(2,3);
 void event_warn(const char *fmt, ...) EV_CHECK_FMT(1,2);
+void event_sock_err(int eval, int sock, const char *fmt, ...) EV_CHECK_FMT(3,4);
+void event_sock_warn(int sock, const char *fmt, ...) EV_CHECK_FMT(2,3);
 void event_errx(int eval, const char *fmt, ...) EV_CHECK_FMT(2,3);
 void event_warnx(const char *fmt, ...) EV_CHECK_FMT(1,2);
 void event_msgx(const char *fmt, ...) EV_CHECK_FMT(1,2);
